More improvements on the main Shell and new controls project

--- a/NYTD.App/packages.config
+++ b/NYTD.App/packages.config
@@ -3,7 +3,13 @@
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net461" />
   <package id="Caliburn.Micro.Start" version="3.2.0" targetFramework="net461" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.4.0.1044" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="PixelLab.BOT" version="6.0.2" targetFramework="net461" />
+  <package id="PixelLab.Common" version="6.0.2" targetFramework="net461" />
+  <package id="PixelLab.Core" version="6.0.2" targetFramework="net461" />
+  <package id="Prism" version="4.1.0.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
