--- a/NYTD.Controls/NYTD.Controls.csproj
+++ b/NYTD.Controls/NYTD.Controls.csproj
@@ -61,6 +61,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FilterControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
