--- a/NYTD.App/packages.config
+++ b/NYTD.App/packages.config
@@ -4,6 +4,10 @@
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net461" />
   <package id="Caliburn.Micro.Start" version="3.2.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net461" />
+  <package id="Google.Apis" version="1.34.0" targetFramework="net461" />
+  <package id="Google.Apis.Auth" version="1.34.0" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.34.0" targetFramework="net461" />
+  <package id="Google.Apis.YouTube.v3" version="1.34.0.1226" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.4.0.1044" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
@@ -11,5 +15,10 @@
   <package id="PixelLab.Common" version="6.0.2" targetFramework="net461" />
   <package id="PixelLab.Core" version="6.0.2" targetFramework="net461" />
   <package id="Prism" version="4.1.0.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
