--- a/NYTD.Lib/NYTD.Lib.csproj
+++ b/NYTD.Lib/NYTD.Lib.csproj
@@ -78,13 +78,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Classes\ChannelQuery.cs" />
+    <Compile Include="Models\Classes\PlaylistQuery.cs" />
+    <Compile Include="Models\Classes\Query.cs" />
+    <Compile Include="Models\Classes\SearchQuery.cs" />
+    <Compile Include="Models\Classes\VideoQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Impl\SearchQuery.cs" />
-    <Compile Include="Services\Impl\SearchService.cs" />
     <Compile Include="Services\Impl\YouTubeApiService.cs" />
-    <Compile Include="Services\Interfaces\IPagination.cs" />
     <Compile Include="Services\Interfaces\IYouTubeApiService.cs" />
-    <Compile Include="Services\Interfaces\IYTApiService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -92,7 +93,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helpers\" />
-    <Folder Include="Models\Classes\" />
     <Folder Include="Models\Interfaces\" />
     <Folder Include="SearchResource\ListRequest\" />
   </ItemGroup>
