--- a/NYTD.App/App.config
+++ b/NYTD.App/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="NYTD.App.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
@@ -15,4 +20,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <NYTD.App.Properties.Settings>
+      <setting name="API_KEY" serializeAs="String">
+        <value>AIzaSyC9rv9XNTx9ZZPRVKkuDM4g8D6ZcZrjDno</value>
+      </setting>
+    </NYTD.App.Properties.Settings>
+  </applicationSettings>
 </configuration>
